created urls.py for video_application

--- a/video_application/index.html
+++ b/video_application/index.html
@@ -5,7 +5,7 @@ Home
 {% endblock %} 
 
 {% block body %}
-<h1>Welcome to Youtube Django Clone</h1><br>
+<h1>Watch,Upload and comment on Videos</h1><br>
 <br>
 
 {% for video in most_recent_videos %}
